--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mode - Secure File Sharing</title>
+    <title>Haste</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-black font-sans flex items-center justify-center min-h-screen p-4 sm:p-6">
