--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body class="bg-white text-black font-sans flex items-center justify-center min-h-screen p-4 sm:p-6">
     <div class="w-full max-w-md mx-auto">
         <div class="text-center mb-8">
-            <h1 class="text-3xl font-bold tracking-tight">Mode</h1>
+            <h1 class="text-3xl font-bold tracking-tight">Haste</h1>
             <p class="text-zinc-600 mt-2">Secure, peer-to-peer file sharing.</p>
         </div>
 
